--- a/NEU-LLM-Avartars-Szeka-1/textBasedSimulation/untitled.ipynb
+++ b/NEU-LLM-Avartars-Szeka-1/textBasedSimulation/untitled.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Summary of the current changes as part of integration effort:\n",
+    "\n",
+    "#1. File Status:\n",
+    "    #  How: Commented out entire notebook\n",
+    "    #  Why: Using onboarding agent's audio processing\n",
+    " \n",
+    "#2. Integration Impact:\n",
+    "    #  How: No changes needed\n",
+    "    #  Why: Audio handling managed by agent system\n",
+    " \n",
+    "#3. Dependencies:\n",
+    "    #  How: Update imports in any referencing files\n",
+    "    #  Why: Point to vrchat-guide audio components"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -504,7 +523,6 @@
     "API_KEY = os.environ.get(\"API_KEY\")\n",
     "openai_client = OpenAI(api_key=API_KEY)\n",
     "\n",
-    "# openai.api_key = \"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\"\n",
     "def summarize_dialogue(dialogue_text):\n",
     "    # Split the dialogue into smaller chunks if it exceeds the maximum token limit\n",
     "    max_tokens = 4096\n",
